--- a/index.html
+++ b/index.html
@@ -183,7 +183,7 @@
                         </li>
                         
                         <li>
-                            <a href='#' title='Tool'><i class="fas fa-tools" style="font-size: 35px;"></i> <span>Too;</span></a>
+                            <a href='#' title='Tool'><i class="fas fa-tools" style="font-size: 35px;"></i> <span>Tool</span></a>
                         </li>
                         
                         <li>
